fix camper title overflow (2)

--- a/src/components/Catalog/SearchResultItem/SearchResultItem.module.css
+++ b/src/components/Catalog/SearchResultItem/SearchResultItem.module.css
@@ -193,5 +193,5 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 340px;
+    width: 350px;
 }
